book/tests/snapshots/snapshot__run_reference_prql@queries__dialect-and-version-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/dialect-and-version-2.prql
---
SELECT
  *
FROM
  employees
