book/tests/snapshots/snapshot__run_reference_prql@queries__dialect_and_version-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/dialect_and_version-0.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10
