book/tests/snapshots/snapshot__run_reference_prql@queries__syntax-10.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-10.prql
---
SELECT
  *
FROM
  employees
WHERE
  id = $1
