book/tests/snapshots/snapshot__run_reference_prql@queries__syntax-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-4.prql
---
SELECT
  first_name
FROM
  employees
